--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -168,7 +168,7 @@
       "feedback_invalid_blockheight": "Please provide a valid blockheight value greater than or equal to {{ min }}.",
       "label_gaplimit": "Address import limit",
       "description_gaplimit": "The amount of addresses that are imported per jar. Set to the highest address index used in any of the jars. Increase this number if your wallet is heavily used.",
-      "feedback_invalid_gaplimit": "Please provide a valid gaplimit value greater than or equal to {{ min }}.",
+      "feedback_invalid_gaplimit": "Please provide a valid gaplimit value between {{ min }} and {{ max }}.",
       "text_button_submit": "Review",
       "text_button_submitting": "Review"
     },
