--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -555,10 +555,10 @@
   },
   "orderbook": {
     "title": "Orderbook",
-    "text_orderbook_summary_one": "{{ count }} offer by {{ counterpartyCount }} conterparty",
-    "text_orderbook_summary_other": "{{ count }} offers by {{ counterpartyCount }} conterparties",
-    "text_orderbook_summary_filtered_one": "found {{ count }} offer by {{ counterpartyCount }} conterparty",
-    "text_orderbook_summary_filtered_other": "found {{ count }} offers by {{ counterpartyCount }} conterparties",
+    "text_orderbook_summary_one": "{{ count }} offer by {{ counterpartyCount }} counterparty",
+    "text_orderbook_summary_other": "{{ count }} offers by {{ counterpartyCount }} counterparties",
+    "text_orderbook_summary_filtered_one": "found {{ count }} offer by {{ counterpartyCount }} counterparty",
+    "text_orderbook_summary_filtered_other": "found {{ count }} offers by {{ counterpartyCount }} counterparties",
     "alert_empty_orderbook": "Orderbook is empty",
     "error_loading_orderbook_failed": "Error while loading the orderbook. Your current local setup might not support fetching the orderbook. Reason: {{ reason }}",
     "text_offer_type_absolute": "absolute",
