--- a/src/i18n/locales/de/translation.json
+++ b/src/i18n/locales/de/translation.json
@@ -35,7 +35,7 @@
   },
   "navbar": {
     "title": "Jam",
-    "text_rescan_in_progress": "Scanne...",
+    "text_rescan_in_progress": "Scanne erneut...",
     "button_create_wallet": "Wallet erstellen",
     "tab_send": "Senden",
     "tab_receive": "Empfangen",
@@ -159,15 +159,15 @@
       "text_button_submitting": "Fortfahren"
     },
     "import_details": {
-      "title": "Bitte gib deine mnemonic phrase ein!",
-      "subtitle": "Bitte gib deine Mnemonic Phrase Wort für Wort und in der richtigen Reihenfolge ein, um den Rescan zu starten. ",
-      "feedback_invalid_menmonic_phrase": "Bitte gib eine korrekte mnemonic phrase ein.",
+      "title": "Bitte gib deine Mnemonic Phrase ein!",
+      "subtitle": "Bitte gib deine Mnemonic Phrase in der richtigen Reihenfolge ein, um den Rescan zu starten.",
+      "feedback_invalid_menmonic_phrase": "Bitte gib eine korrekte Mnemonic Phrase ein.",
       "import_options": "Import Optionen",
-      "label_blockheight": "Rescan height ",
-      "description_blockheight": "Die Blockhöhe, ab der der erneute Scan-Prozess beginnt, nach deinen Geldern zu suchen. Je früher die Wallet erstellt wurde, umso niedriger sollte dieser Wert sein.",
+      "label_blockheight": "Rescan Blockhöhe ",
+      "description_blockheight": "Der Zeitpunkt, ab dem der erneute Scan-Prozess beginnt, nach deinen Bitcoin UTXOs zu suchen. Je früher die Wallet erstellt wurde, desto niedriger sollte der Wert sein.",
       "feedback_invalid_blockheight": "Bitte gib einen gültigen Wert zwischen {{ min }} und der derzeitigen Blockhöhe an. ",
       "label_gaplimit": "Adressen Import Limit",
-      "description_gaplimit": "Die Anzahl von Adressen, die pro Glas importiert werden sollen. Wähle einen hohen Wert, wenn du deine Wallet oft benutzt hast. ",
+      "description_gaplimit": "Die Anzahl der importierten Adressen pro Glas. Setze diesen Wert auf den höchsten Adress-Index, der in einem der Gläser verwendet wird. Erhöhe diese Zahl, wenn deine Wallet stark genutzt wird.",
       "feedback_invalid_gaplimit": "Bitte gib einen gültigen Wert zwischen {{ min }} und {{ max }} an.",
       "alert_high_gaplimit_value": "Der angegebene Wert ist Grund dafür, dass viele Adressen importiert werden. Dies kann sich auf die Performance auswirken. ",
       "text_button_submit": "Überprüfen",
@@ -182,7 +182,7 @@
   },
   "current_wallet": {
     "text_loading": "Lade",
-    "text_rescan_in_progress": "Erneuter Scan läuft derzeit...",
+    "text_rescan_in_progress": "Ein erneuter Scan wird derzeit ausgeführt...",
     "button_deposit": "Empfangen",
     "button_withdraw": "Senden",
     "error_loading_failed": "Laden der Wallet fehlgeschlagen.",
