imported changes done on transifex

--- a/src/i18n/locales/zh_Hans/translation.json
+++ b/src/i18n/locales/zh_Hans/translation.json
@@ -165,11 +165,11 @@
       "import_options": "导入选项",
       "label_blockheight": "重新扫描高度",
       "description_blockheight": "扫描过程开始寻找你的资金的区块高度。 该钱包创建的越早，该值应该越低。",
-      "feedback_invalid_blockheight": "Please provide a valid value between {{ min }} and the current blockheight.",
+      "feedback_invalid_blockheight": "请提供一个有效的值，从 {{ min }} 到当前的区块高度。",
       "label_gaplimit": "地址导入限制",
       "description_gaplimit": "每个罐子导入的地址数量。设置为任何罐子中使用的最高地址索引。 如果你大量使用你的钱包，则应增加此数字。",
-      "feedback_invalid_gaplimit": "Please provide a valid value between {{ min }} and {{ max }}.",
-      "alert_high_gaplimit_value": "The given value causes many addresses to be imported, which can lead to a decline in performance and responsiveness.",
+      "feedback_invalid_gaplimit": "请提供一个有效的值，从 {{ min }} 到 {{ max }}。",
+      "alert_high_gaplimit_value": "所提供的值将导致许多地址被导入，这可能导致性能和响应能力下降。",
       "text_button_submit": "检查",
       "text_button_submitting": "检查"
     },
@@ -555,10 +555,10 @@
   },
   "orderbook": {
     "title": "订单簿",
-    "text_orderbook_summary_one": "来自{{ counterpartyCount }}个对等方的{{ count }}个报价",
-    "text_orderbook_summary_other": "来自{{ counterpartyCount }}个对等方的{{ count }}个报价",
-    "text_orderbook_summary_filtered_one": "找到了来自{{ counterpartyCount }}个对等方的{{ count }}个报价",
-    "text_orderbook_summary_filtered_other": "找到了来自{{ counterpartyCount }}个对等方的{{ count }}个报价",
+    "text_orderbook_summary_one": "{{ count }} offer by {{ counterpartyCount }} counterparty",
+    "text_orderbook_summary_other": "{{ count }} offers by {{ counterpartyCount }} counterparties",
+    "text_orderbook_summary_filtered_one": "found {{ count }} offer by {{ counterpartyCount }} counterparty",
+    "text_orderbook_summary_filtered_other": "found {{ count }} offers by {{ counterpartyCount }} counterparties",
     "alert_empty_orderbook": "订单簿是空的",
     "error_loading_orderbook_failed": "加载订单簿时出错了。有可能你目前的本地设置不支持获取订单簿。原因：{{ reason }}",
     "text_offer_type_absolute": "绝对",
