--- a/src/i18n/locales/zh_Hant/translation.json
+++ b/src/i18n/locales/zh_Hant/translation.json
@@ -165,11 +165,11 @@
       "import_options": "導入選項",
       "label_blockheight": "重新掃描高度",
       "description_blockheight": "掃描過程開始尋找你的資金的區塊高度。該錢包創建的越早，該值應該越低。",
-      "feedback_invalid_blockheight": "Please provide a valid value between {{ min }} and the current blockheight.",
+      "feedback_invalid_blockheight": "請提供一個有效的值，從 {{ min }} 到當前的區塊高度。",
       "label_gaplimit": "地址導入限制",
       "description_gaplimit": "每個罐子導入的地址數量。設置為任何罐子中使用的最高地址索引。如果你大量使用你的錢包，則應增加此數字。",
-      "feedback_invalid_gaplimit": "Please provide a valid value between {{ min }} and {{ max }}.",
-      "alert_high_gaplimit_value": "The given value causes many addresses to be imported, which can lead to a decline in performance and responsiveness.",
+      "feedback_invalid_gaplimit": "請提供一個有效的值，從 {{ min }} 到 {{ max }}。",
+      "alert_high_gaplimit_value": "所提供的值將導致許多地址被導入，這可能導致性能和響應能力下降。",
       "text_button_submit": "檢查",
       "text_button_submitting": "檢查"
     },
@@ -555,10 +555,10 @@
   },
   "orderbook": {
     "title": "訂單簿",
-    "text_orderbook_summary_one": "來自{{ counterpartyCount }}個對等方的{{ count }}個報價",
-    "text_orderbook_summary_other": "來自{{ counterpartyCount }}個對等方的{{ count }}個報價",
-    "text_orderbook_summary_filtered_one": "找到了來自{{ counterpartyCount }}個對等方的{{ count }}個報價",
-    "text_orderbook_summary_filtered_other": "找到了來自{{ counterpartyCount }}個對等方的{{ count }}個報價",
+    "text_orderbook_summary_one": "{{ count }} offer by {{ counterpartyCount }} counterparty",
+    "text_orderbook_summary_other": "{{ count }} offers by {{ counterpartyCount }} counterparties",
+    "text_orderbook_summary_filtered_one": "found {{ count }} offer by {{ counterpartyCount }} counterparty",
+    "text_orderbook_summary_filtered_other": "found {{ count }} offers by {{ counterpartyCount }} counterparties",
     "alert_empty_orderbook": "訂單簿是空的",
     "error_loading_orderbook_failed": "加載訂單簿時出錯了。有可能你的本地設置不支持獲取訂單簿。原因：{{ reason }}",
     "text_offer_type_absolute": "絕對",
