--- a/src/i18n/locales/de/translation.json
+++ b/src/i18n/locales/de/translation.json
@@ -164,12 +164,12 @@
       "feedback_invalid_menmonic_phrase": "Bitte gib eine korrekte Mnemonic Phrase ein.",
       "import_options": "Import Optionen",
       "label_blockheight": "Rescan Blockhöhe ",
-      "description_blockheight": "Der Zeitpunkt, ab dem der erneute Scan-Prozess beginnt, nach deinen Bitcoin UTXOs zu suchen. Je früher die Wallet erstellt wurde, desto niedriger sollte der Wert sein.",
+      "description_blockheight": "Ab diesen Zeitpunkt beginnt der Rescan Prozess und sucht nach deinen Bitcoin UTXOs. Je früher die Wallet erstellt wurde, desto niedriger sollte der Wert sein.",
       "feedback_invalid_blockheight": "Bitte gib einen gültigen Wert zwischen {{ min }} und der derzeitigen Blockhöhe an. ",
       "label_gaplimit": "Adressen Import Limit",
-      "description_gaplimit": "Die Anzahl der importierten Adressen pro Glas. Setze diesen Wert auf den höchsten Adress-Index, der in einem der Gläser verwendet wird. Erhöhe diese Zahl, wenn deine Wallet stark genutzt wird.",
+      "description_gaplimit": "Die Anzahl der importierten Adressen pro Glas. Setze diesen Wert auf den höchsten Adressen-Index deiner Gläser. Erhöhe diese Zahl, wenn du deine Wallet schon lange nutzt.",
       "feedback_invalid_gaplimit": "Bitte gib einen gültigen Wert zwischen {{ min }} und {{ max }} an.",
-      "alert_high_gaplimit_value": "Der angegebene Wert ist Grund dafür, dass viele Adressen importiert werden. Dies kann sich auf die Performance auswirken. ",
+      "alert_high_gaplimit_value": "Der angegebene Wert bewirkt, dass viele Adressen importiert werden, was die Leistung und Reaktionsfähigkeit beeinträchtigen kann.",
       "text_button_submit": "Überprüfen",
       "text_button_submitting": "Überprüfen"
     },
