imported changes to translation

--- a/src/i18n/locales/zh_Hans/translation.json
+++ b/src/i18n/locales/zh_Hans/translation.json
@@ -555,10 +555,10 @@
   },
   "orderbook": {
     "title": "订单簿",
-    "text_orderbook_summary_one": "{{ count }} offer by {{ counterpartyCount }} counterparty",
-    "text_orderbook_summary_other": "{{ count }} offers by {{ counterpartyCount }} counterparties",
-    "text_orderbook_summary_filtered_one": "found {{ count }} offer by {{ counterpartyCount }} counterparty",
-    "text_orderbook_summary_filtered_other": "found {{ count }} offers by {{ counterpartyCount }} counterparties",
+    "text_orderbook_summary_one": "来自{{ counterpartyCount }}个对等方的{{ count }}个报价",
+    "text_orderbook_summary_other": "来自{{ counterpartyCount }}个对等方的{{ count }}个报价",
+    "text_orderbook_summary_filtered_one": "找到了来自{{ counterpartyCount }}个对等方的{{ count }}个报价",
+    "text_orderbook_summary_filtered_other": "找到了来自{{ counterpartyCount }}个对等方的{{ count }}个报价",
     "alert_empty_orderbook": "订单簿是空的",
     "error_loading_orderbook_failed": "加载订单簿时出错了。有可能你目前的本地设置不支持获取订单簿。原因：{{ reason }}",
     "text_offer_type_absolute": "绝对",
