--- a/src/i18n/locales/zh_Hant/translation.json
+++ b/src/i18n/locales/zh_Hant/translation.json
@@ -555,10 +555,10 @@
   },
   "orderbook": {
     "title": "訂單簿",
-    "text_orderbook_summary_one": "{{ count }} offer by {{ counterpartyCount }} counterparty",
-    "text_orderbook_summary_other": "{{ count }} offers by {{ counterpartyCount }} counterparties",
-    "text_orderbook_summary_filtered_one": "found {{ count }} offer by {{ counterpartyCount }} counterparty",
-    "text_orderbook_summary_filtered_other": "found {{ count }} offers by {{ counterpartyCount }} counterparties",
+    "text_orderbook_summary_one": "來自{{ counterpartyCount }}個對等方的{{ count }}個報價",
+    "text_orderbook_summary_other": "來自{{ counterpartyCount }}個對等方的{{ count }}個報價",
+    "text_orderbook_summary_filtered_one": "找到了來自{{ counterpartyCount }}個對等方的{{ count }}個報價",
+    "text_orderbook_summary_filtered_other": "找到了來自{{ counterpartyCount }}個對等方的{{ count }}個報價",
     "alert_empty_orderbook": "訂單簿是空的",
     "error_loading_orderbook_failed": "加載訂單簿時出錯了。有可能你的本地設置不支持獲取訂單簿。原因：{{ reason }}",
     "text_offer_type_absolute": "絕對",
