--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -8,6 +8,7 @@
     "close": "Close",
     "abort": "Abort",
     "cancel": "Cancel",
+    "done": "Done",
     "table": {
       "pagination": {
         "items_per_page": {
@@ -517,6 +518,17 @@
         "label_address": "Timelocked address",
         "button_spend": "Unlock Funds",
         "button_renew": "Renew Bond"
+      },
+      "renew": {
+        "title": "Renew Bond",
+        "text_loading": "Loading...",
+        "text_sending": "Renewing...",
+        "text_button_submit": "Renew Bond",
+        "success_text": "Fidelity Bond renewed successfully!",
+        "error_renewing_fidelity_bond": "Error while renewing expired fidelity bond.",
+        "confirm_send_modal": {
+          "title": "Confirm renewing expired Fidelity Bond"
+        }
       },
       "move": {
         "title": "Unlock Funds",
